--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -33,7 +33,7 @@
         } 
     }
     .name{
-        color: $white;
+        color: rgb(90, 172, 239);
         margin-top: 10px;
         margin-bottom: 10px;
         font-size: 18px;
