--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -81,6 +81,40 @@
 
     }
 }
+.container-submenu{
+    position: relative;
+    width: auto;
+    top: 37px;
+    left: -274px;
+    .profile-menu {
+        position: absolute;
+        width: 150px;
+        z-index: 2;
+        background: linear-gradient(145deg, rgba(0, 0, 0, 0.9), rgba(20, 20, 20, 0.85));
+        box-shadow: 0px 8px 25px rgba(106, 93, 255, 0.5);
+        border: 2px solid black;
+        border-radius: 10px;
+        border-bottom: 2.5px solid rgba(0, 216, 255, 0.95);
+        button {
+            all: unset;
+            text-align: center;
+            display: block;
+            width: 70%;
+            margin: auto;
+            margin-top: 15px;
+            margin-bottom: 15px;
+            padding: 8px;
+            background-color: rgba(255, 217, 0, 0.95);
+            color: black;
+            border-radius: 5px;
+            cursor: pointer;
+            &:hover {
+              background-color: #ffe23c;
+            }
+        }
+      }
+}
+
 @media (max-width: 1000px){
     .nav-bar-container{
         .nav-content{
@@ -108,6 +142,21 @@
             }    
         }
     }
+    .container-submenu{  
+        top: 28px;
+        left: -198px;
+        .profile-menu {
+            border-radius: 10px;
+            width: 110px;
+            button {
+                font-size: 16px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                padding: 3px;
+                border-radius: 4px;
+            }
+          }
+    }
 
 }
 @media (max-width: 768px){
@@ -134,6 +183,21 @@
                 }
             }    
         }
+    }
+    .container-submenu{  
+        top: 20px;
+        left: -49%;
+        .profile-menu {
+            border-radius: 7%;
+            width: 80px;
+            button {
+                font-size: 14px;
+                margin-top: 8px;
+                margin-bottom: 8px;
+                padding: 2px;
+                border-radius: 3px;
+            }
+          }
     }
 
 }
