--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -31,6 +31,7 @@
         </div>
     }
     <app-providers [config]="config"></app-providers>  
+    <app-comments [movieId]="movieId"></app-comments>
     </div>
     <app-auth-modal
         [showModal]="showLoginModal"
