--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -13,7 +13,9 @@
                 <button *ngIf="list.movies.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
                 <div class="cards-wrapper" #cardWrapper>
                     <div *ngFor="let movieCard of list.movieCards">
-                        <button><i class="bi bi-trash3-fill"></i></button>
+                        <button (click)="deleteMovieOrSerie(movieCard.id, list.id)">
+                            <i class="bi bi-trash3-fill"></i>
+                          </button>
                         <app-movie-card class="card" [config]="movieCard"></app-movie-card>
                     </div>
                 </div>
