--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,7 +1,10 @@
-
 <div class="input-container">
     <i class="bi bi-search"></i>
-    <input type="text" placeholder="¿cómo te sientes hoy? ¡Yo te recomiendo!" (input)="onInputChange($event)" (keypress)="onKeyPress($event)" 
-    #searchInput>
+    <input type="text" placeholder="¿cómo te sientes hoy? ¡Yo te recomiendo!" (input)="onInputChange($event)" (keypress)="onKeyPress($event)" #searchInput>
     <button (click)="onButtonClick($event, searchInput)"><span>Recomendar</span><i class="bi bi-box-arrow-in-left"></i></button>
+    <div *ngIf="chatLines.length > 0" class="chat-dialog">
+        <div class="chat-line">
+            <markdown class="text" [data]="chatLines.join('')"></markdown>
+        </div>
+    </div>
 </div>
