--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -1,31 +1,37 @@
-
 @import '../../../themes/theme.scss';
 
-.input-container{
+.input-container {
     position: relative;
     display: flex;
     padding: 10px 10px;
     align-items: center;
-    gap: 10px; 
-    border-radius: 10px;
+    gap: 10px;
+    border-radius: 8px 8px 0px 0px ;
     background-color: $black-input;
     margin-top: 6px;
     border: 1.5px solid $black-20;
     width: 97%;
+    &:focus-within{
+        border-radius: 8px 8px 0px 0px ;
+    }
 
-    i{
+    i {
         font-size: 22px;
-        color:rgba($input, 0.9);
-        transition: color 0.3s ease;   
-    }  &:focus-within {
+        color: rgba($input, 0.9);
+        transition: color 0.3s ease;
+    }
+
+    &:focus-within {
         i {
             color: $neon-purple;
         }
     }
-    button{
+
+    button {
         all: unset;
         cursor: pointer;
     }
+
     input {
         flex: 1;
         padding: 8px 0;
@@ -37,20 +43,55 @@
         transition: border-color 0.3s ease;
         color: $white;
         &:focus {
-        border-color: $neon-purple;
+            border-color: $neon-purple;
         }
-    } 
-    span{
+    }
+
+    span {
         margin-right: 10px;
         font-size: 19px;
-        color:rgba($input, 0.9);
-        transition: color 0.3s ease; 
-    }&:focus-within {
-        span{
+        color: rgba($input, 0.9);
+        transition: color 0.3s ease;
+    }
+
+    &:focus-within {
+        span {
             color: $neon-purple;
         }
-    }&
-    span:hover{
+    }
+
+    span:hover {
         color: $neon-purple;
+    }
+
+    .chat-dialog {
+        position: absolute;
+        top: 114%; 
+        left: -1.45px;
+        width: 100%;
+        padding: 10px;
+        background-color: rgba(17, 7, 32, 0.75);
+        color: $white;
+        padding: 8px 10px;
+        border: 1.5px solid $black-20;
+        border-radius: 0px 0px 8px 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3); 
+        max-height: 200px; 
+        overflow-y: auto; 
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        opacity: 0.5;
+        transform: translateY(-10px);
+        pointer-events: none; 
+    }
+
+    &:focus-within .chat-dialog {
+        opacity: 1;
+        pointer-events: auto; 
+    }
+
+    .chat-line {
+        padding: 15px;
+        font-size: 16px;
+        line-height: 1.5;
     }
 }
