--- a/src/app/components/segmented-control/segmented-control.component.scss
+++ b/src/app/components/segmented-control/segmented-control.component.scss
@@ -1,11 +1,11 @@
 
-@import '../../../themes/theme.scss';
+@use '../../../themes/theme.scss' as theme;
 
 .segmented-control-component{
     display: flex;
     width: 100%;
     padding: 8px;
-    background: $black-20;
+    background: theme.$black-20;
     width: fit-content;
     border-radius: 10px;
     border-bottom: 5px solid black;
@@ -15,21 +15,21 @@
         padding: 8px 32px;
         font-size: 16px;
         font-weight: 500;
-        color: $app-secondary;
+        color: theme.$app-secondary;
         border-radius: 10px;
         cursor: pointer;
         margin: 0.5px;
-        font-family: $font-segement;
+        font-family: theme.$font-segement;
         &:hover{
-            background-color:$app-primary;
-            color: $white;
+            background-color: theme.$app-primary;
+            color: theme.$white;
             transition: all 0.3s ease;
         }
     }
     
     .active-item{
-        background-color:$app-primary;
-        color: $white;
+        background-color:theme.$app-primary;
+        color: theme.$white;
     }
 }
 @media (max-width: 768px){
