--- a/src/app/components/comments/comments.component.scss
+++ b/src/app/components/comments/comments.component.scss
@@ -1,4 +1,4 @@
-@import '../../../themes/theme.scss';
+@use '../../../themes/theme.scss' as theme;
 .comment-section {
     margin-top: 60px;
     width: 100%;
@@ -8,9 +8,9 @@
     box-shadow: 0px 8px 25px rgba(106, 93, 255, 0.3);
 
     .comment-title {
-        font-family: $font-secundary;
+        font-family: theme.$font-secundary;
         font-size: 23px;
-        color: $white;
+        color: theme.$white;
         border-bottom: 2.5px solid rgba(0, 216, 255, 0.95);
         padding-bottom: 10px;
         margin-bottom: 25px;
@@ -38,14 +38,14 @@
         margin-top: 20px;
 
         .comment-textarea {
-            font-family: $font-secundary;
+            font-family: theme.$font-secundary;
             color: black;
             font-weight: bold;
             width: 100%;
             height: 100px;
             padding: 10px;
             border-radius: 8px;
-            background-color: $white;
+            background-color: theme.$white;
             border: 2px solid  rgba(0, 0, 0);
             box-shadow: 0px 8px 25px rgba(106, 93, 255, 0.6);
             margin-bottom: 10px;
@@ -64,7 +64,7 @@
                 border-radius: 5px;
                 cursor: pointer;
                 border: 1px solid  rgba(0, 0, 0);
-                background-color:$white;
+                background-color:theme.$white;
 
                 &:hover {
                     background-color: #ffffff;
@@ -110,7 +110,7 @@
                 h4 {
                     text-align: left;
                     padding-left: 5px;
-                    font-family: $font-primary;
+                    font-family: theme.$font-primary;
                     font-size: 18px;
                     color: rgba(255, 217, 0, 0.9);
                     margin-bottom: 5px;
@@ -120,9 +120,9 @@
             }
             .text {
                 text-align: left;
-                font-family: $font-title;
+                font-family: theme.$font-title;
                 font-size: 16px;
-                color: $white;
+                color: theme.$white;
                 line-height: 1.5;
                 padding: 10px;
                 border-radius: 8px;
@@ -146,9 +146,9 @@
     }
 
     .no-comments-message {
-        font-family: $font-primary;
+        font-family: theme.$font-primary;
         font-size: 16px;
-        color: $white;
+        color: theme.$white;
         text-align: center;
     }
 }
