--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
- @import 'themes/theme.scss';
+ @use 'themes/theme.scss' as theme;
 
 *{
     padding: 0px;
@@ -16,7 +16,7 @@ body{
     justify-content: center;
     background-attachment: fixed; 
     background-size: cover; 
-    font-family: $font-primary, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: theme.$font-primary, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 html {
     scrollbar-width: thin; 
