--- a/src/app/components/auth-modal/auth-modal.component.scss
+++ b/src/app/components/auth-modal/auth-modal.component.scss
@@ -47,6 +47,9 @@
     width: 100%;
     cursor: pointer;
     padding: 2px;
+    &:hover{
+      background: transparent;
+    }
   }
   
   input {
@@ -65,6 +68,10 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    &:hover{
+      background: #58a9ff;
+    }
   }
   
   .switch-text {
@@ -102,4 +109,42 @@
   form{
     width: 100%;
   }
+  .google-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
+    background: white;
+    color: black;
+    border: 1.5px solid #c1daf5;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0 3px 4px rgba(0, 216, 255, 0.3);
+    .textGoogle{
+      all: unset;
+      border-bottom: 2.5px solid #00d8ff;
+      margin-right: 17px;
+    }
   
+    i {
+      font-size: 18px;
+      color: hsl(0, 87%, 56%); // Color de Google
+    }
+  
+    &:hover {
+      background: #dff0ff;
+    }
+  
+    &:active {
+      background: #e1e1e1;
+    }
+  }
+.or{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+  color: black;
+}
