--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -15,7 +15,7 @@
                 <div class="container-overview">
                     <div class="description-title">{{config.titleDescription}}</div>
                     <div class="overview">
-                        <p>{{config.description}}</p>
+                        <p>{{config.description || 'Sin descripción'}}</p>
                     </div>
                 </div>
                 <div class="info-box">
