--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,7 +6,7 @@
         margin: auto;
         .search-section{
             position: relative;
-            height: 450px;
+            height: 65vh;
             margin-top: 40px;
             overflow: hidden;
             background-color: theme.$fondo-carousel;
